--- a/ngApp_netCoreApi_kestrel/ngApp_netCoreApi_kestrel.csproj
+++ b/ngApp_netCoreApi_kestrel/ngApp_netCoreApi_kestrel.csproj
@@ -10,11 +10,16 @@
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
-    <RootNamespace>ng2_kestrel_appserver_03</RootNamespace>
+    <RootNamespace>ngApp_netCoreApi_kestrel</RootNamespace>
+    <Nullable>enable</Nullable>
+    <UserSecretsId>9545f539-ac88-48fb-91dd-9995dae14014</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
 
   <ItemGroup>
